neutrinocommon/shareobjects/cython_codes/gslneuosc/cout.txt
running build_ext
cythoning src/gslneuosc.pyx to src/gslneuosc.c

Error compiling Cython file:
------------------------------------------------------------
...
    cdef int numneu = 3
    
    # creating auxiliary variable    
    cdef Container params = new Container
    # filling it up
    params.track = track
         ^
------------------------------------------------------------

src/gslneuosc.pyx:340:10: Expected an identifier before '='
building 'gslneuosc' extension
clang -fno-strict-aliasing -fno-common -dynamic -g -Os -pipe -fno-common -fno-strict-aliasing -fwrapv -mno-fused-madd -DENABLE_DTRACE -DMACOSX -DNDEBUG -Wall -Wstrict-prototypes -Wshorten-64-to-32 -DNDEBUG -g -Os -Wall -Wstrict-prototypes -DENABLE_DTRACE -arch i386 -arch x86_64 -pipe -I/Users/carguelles/Library/Python/2.7/lib/python/site-packages -I/usr/local/Cellar/gsl/1.15/include -I/System/Library/Frameworks/Python.framework/Versions/2.7/include/python2.7 -c src/gslneuosc.c -o build/temp.macosx-10.8-intel-2.7/src/gslneuosc.o
clang: warning: argument unused during compilation: '-mno-fused-madd'
src/gslneuosc.c:1:2: error: Do not use this file, it is the result of a failed Cython compilation.
#error Do not use this file, it is the result of a failed Cython compilation.
 ^
1 error generated.
error: command 'clang' failed with exit status 1
